api: nft, collection, events
