# api/src/handlers/events.rs
@@ -2,9 +2,10 @@ use std::convert::Infallible;
 use warp::http::StatusCode;
 use storage::api_service::ApiService;
 use warp::Filter;
-use storage::types::Address;
+use crate::model::Event;
 use storage::tables::EventType;
 use serde::{Serialize, Deserialize};
+use std::ops::Sub;
 
 
 /// GET /events
@@ -18,16 +19,29 @@ pub fn get_events(
         .and_then(get_events_handler)
 }
 
-pub async fn get_events_handler(query: EventsQuery, _db: ApiService) -> Result<impl warp::Reply, Infallible> {
-    Ok(StatusCode::OK)
+pub async fn get_events_handler(query: EventsQuery, db: ApiService) -> Result<Box<dyn warp::Reply>, Infallible> {
+    match db.list_events(query.nft, query.collection, query.typ, query.page_size.unwrap_or(100), query.offset.unwrap_or_default()).await {
+        Err(e) => Ok(Box::from(warp::reply::with_status(e.to_string(), StatusCode::INTERNAL_SERVER_ERROR))),
+        Ok(mut list) => {
+            let ret: Vec<Event> = list.drain(..).map(|ev| Event {
+                id: ev.id,
+                address: ev.address,
+                typ: ev.event_type,
+                cat: ev.event_cat,
+                args: ev.args,
+                ts: ev.created_at as usize,
+            }).collect();
+            Ok(Box::from(warp::reply::with_status(warp::reply::json(&ret), StatusCode::OK)))
+        }
+    }
 }
 
 #[derive(Debug, Clone, Deserialize, Serialize)]
 pub struct EventsQuery {
-    pub owner: Option<Address>,
-    pub collection: Option<Address>,
-    pub nft: Option<Address>,
-    pub initiator: Option<Address>,
+    pub owner: Option<String>,
+    pub collection: Option<String>,
+    pub nft: Option<String>,
+    pub initiator: Option<String>,
     #[serde(rename = "type")]
     pub typ: Option<EventType>,
     #[serde(rename = "page-size")]
