# api/src/handlers/nft.rs
@@ -4,6 +4,7 @@ use storage::api_service::ApiService;
 use warp::Filter;
 use storage::types::Address;
 use serde::{Serialize, Deserialize};
+use crate::model::{NFT, Contract};
 
 
 /// GET /nft/{address}/details
@@ -16,8 +17,37 @@ pub fn get_nft(
         .and_then(get_nft_handler)
 }
 
-pub async fn get_nft_handler(address: Address, _db: ApiService) -> Result<impl warp::Reply, Infallible> {
-    Ok(StatusCode::OK)
+pub async fn get_nft_handler(address: Address, db: ApiService) -> Result<Box<dyn warp::Reply>, Infallible> {
+    match db.get_nft_details((&address).into()).await {
+        Err(e) => Ok(Box::from(warp::reply::with_status(e.to_string(), StatusCode::INTERNAL_SERVER_ERROR))),
+        Ok(None) => Ok(Box::from(warp::reply::with_status(String::default(), StatusCode::BAD_REQUEST))),
+        Ok(Some(nft)) => {
+            let ret = NFT {
+                contract: Contract { 
+                    address: Address::from(nft.address.expect("null nft address")),
+                    name: nft.name,
+                    description: nft.description,
+                    owner: nft.owner.map(Address::from),
+                },
+                collection: Contract { 
+                    address: Address::from(nft.collection.unwrap_or_default()),
+                    name: nft.collection_name,
+                    description: nft.collection_description,
+                    owner: nft.collection_owner.map(Address::from),
+                },
+                manager: nft.manager.map(Address::from),
+                image: "".to_string(),
+                attributes: None,
+                auction: None,
+                forsale: None,
+                current_price: None,
+                last_price: None,
+
+            };
+            Ok(Box::from(warp::reply::with_status(warp::reply::json(&ret), StatusCode::OK)))
+        }
+    }
+
 }
 
 /// GET /nft/{address}/offers
@@ -74,15 +104,30 @@ pub fn get_nft_list(
         .and_then(get_nft_list_handler)
 }
 
-pub async fn get_nft_list_handler(_params: NFTListQuery, _db: ApiService) -> Result<impl warp::Reply, Infallible> {
-    Ok(StatusCode::OK)
+pub async fn get_nft_list_handler(params: NFTListQuery, db: ApiService) -> Result<Box<dyn warp::Reply>, Infallible> {
+    let owners = params.owners.as_ref().map(|x| x.as_slice()).unwrap_or(&[]);
+    let collections = params.collections.as_ref().map(|x| x.as_slice()).unwrap_or(&[]);
+    match db.nft_search(
+        owners,
+        collections,
+        params.price_from,
+        params.price_to,
+        params.price_token.into(),
+        params.forsale,
+        params.auction,
+    ).await {
+        Err(e) => Ok(Box::from(warp::reply::with_status(e.to_string(), StatusCode::INTERNAL_SERVER_ERROR))),
+        Ok(_list) => {
+            Ok(Box::from(warp::reply::with_status(String::default(), StatusCode::BAD_REQUEST)))
+        }
+    }
 }
 
 #[derive(Debug, Clone, Deserialize, Serialize)]
 pub struct NFTListQuery {
-    pub owners: Vec<Address>,
+    pub owners: Option<Vec<String>>,
 
-    pub collections: Vec<Address>,
+    pub collections: Option<Vec<String>>,
 
     #[serde(rename = "priceFrom")]
     pub price_from: Option<u64>,
@@ -91,7 +136,7 @@ pub struct NFTListQuery {
     pub price_to: Option<u64>,
 
     #[serde(rename = "priceToken")]
-    pub price_token: Option<Address>,
+    pub price_token: Option<String>,
 
     pub forsale: Option<bool>,
     pub auction: Option<bool>,
